# dadlexa

./: .gitignore  AudioManager.cpp  AudioManager.h  BackgroundUploader.cpp  BackgroundUploader.h  CMakeLists.txt  Config.h  LedRing.cpp  LedRing.h  OpenAITranscriber.cpp  OpenAITranscriber.h  README.md  TelegramClient.cpp  TelegramClient.h  TelegramReplyPoller.cpp  TelegramReplyPoller.h  UrlEncode.cpp  UrlEncode.h  WakeWordDetector.cpp  WakeWordDetector.h  WifiStatus.cpp  WifiStatus.h  jacob-smart-speaker.ino  partitions.csv  sdkconfig.defaults
audio-manager-test/: AudioManagerTest.cpp  AudioManagerTest.h  audio-manager-test.ino  es8311.cpp
led-test/: led-test.ino
main/: CMakeLists.txt  app_config.c  app_config.h  app_controller.c  app_controller.h  audio_board.c  audio_board.h  idf_component.yml  led_ring.c  led_ring.h  main.c  micro_opus_player.cpp  micro_opus_player.h  mp3_file_player.c  mp3_file_player.h  ogg_opus_encoder.c  ogg_opus_encoder.h  sd_music_library.c  sd_music_library.h  telegram_service.c  telegram_service.h  voice_commands.c  voice_commands.h  voice_flow.c  voice_flow.h  wake_word.c  wake_word.h  web_admin.c  web_admin.h  wifi_service.c  wifi_service.h
silence-tuning-test/: AudioManagerWrapper.cpp  es7210Wrapper.c  es8311Wrapper.cpp  silence-tuning-test.ino
speaker-test/: speaker-test.ino
