idf_component_register(
    SRCS
        "main.c"
        "app_config.c"
        "audio_board.c"
        "led_ring.c"
        "micro_opus_player.cpp"
        "mp3_file_player.c"
        "ogg_opus_encoder.c"
        "sd_music_library.c"
        "telegram_service.c"
        "voice_commands.c"
        "voice_flow.c"
        "wake_word.c"
        "web_admin.c"
        "wifi_service.c"
    INCLUDE_DIRS "." ".."
    REQUIRES
        driver
        esp-sr
        esp_audio_codec
        esp_codec_dev
        esp_http_client
        esp_http_server
        esp_timer
        esp_wifi
        fatfs
        json
        mbedtls
        nvs_flash
        sdmmc
        esphome__micro-opus
)
